--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
   <% @venues.each do |venue| %>
-    <li><%= venue.name %></li>
+    <li><%= link_to venue.name, venue_path(venue) %></li>
   <% end %>
 </ul>
