--- a/app/views/index/register.html.erb
+++ b/app/views/index/register.html.erb
@@ -1,3 +1,5 @@
 <div class="content">
-	<img src="/images/register.png" />
+    <a href="/student">
+        <img src="/images/register.png" />
+    </a>
 </div>
