--- a/app/views/index/student.html.erb
+++ b/app/views/index/student.html.erb
@@ -1,3 +1,7 @@
 <div class="content">
-	<img src="/images/student_home.png" />
+	<map id="_Image-Maps_6201003271241224" name="Image-Maps_6201003271241224">
+        <area shape="rect" coords="226,114,643,224" href="/venues" alt="Find places!" title="Find places!" />
+        <area shape="rect" coords="224,228,641,338" href="/leaderboard" alt="Leaderboard" title="See you and your friends leaderboard!" />
+    </map>
+    <img id="Image-Maps_6201003271241224" src="/images/student_home.png" USEMAP="#Image-Maps_6201003271241224" />
 </div>
