--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
     <img id="masthead" src="/images/masthead.png" alt="Facebook Masthead">
 <div id="doc4" class="yui-t7">
    <div id="hd" role="banner">
-    <img src="/images/TAPCulture.png" alt="TAPCulture! logo">
+       <a href="/"><img src="/images/TAPCulture.png" alt="TAPCulture! logo"></a>
    </div>
    <div id="bd" role="main">
        <div class="yui-ge"> 
