dan index changes

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Index#index</h1>
-<p>Find me in app/views/index/index.html.erb</p>
+<p class="big">I'm a...</p>
+<a class="big" href="/register"><span>Student</span></a>
+<a class="big" href="/teacher"><span>Teacher</span></a>
