--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -11,16 +11,17 @@
 	});
 </script>
 <div style="font-size: 20px; margin-bottom: 20px;">
+	<p>You're at <strong>Guardian High</strong> at N1 9AG</p>
 	<form action="" method="get">
 		Show places near: <input type="text" name="location" style="padding: 5px 10px;" value="<%= params[:location] %>" size="30" />
-		<input type="submit" value="Go" />
+		<input type="submit" class="button" value="Go" />
 	</form>
 </div>
 	
 <div style="float: left; width: 50%">
-	<ul>
+	<ul id="places">
 	  <% @venues.each do |venue| %>
-	    <li><%= venue.name %></li>
+	    <li><%= link_to venue.name, venue_path(venue) %><br /><%= venue.address_1 %> <%= venue.post_code %> - <a href="#">Make Facebook event</a></li>
 	  <% end %>  
 	</ul>
 </div>
