--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -11,8 +11,7 @@
 	});
 </script>
 <div style="font-size: 20px; margin-bottom: 20px;">
-	<p><a href="/student">&laquo; Back to profile</a></p>
-	<p>You're at <strong>Guardian High</strong> at N1 9AG</p>
+	<p><a href="/student">&laquo; Back to profile</a> - You're at <strong>Guardian High</strong> at N1 9AG</p>
 	<form action="" method="get">
 		Show places near: <input type="text" name="location" style="padding: 5px 10px;" value="<%= params[:location] %>" size="30" />
 		<input type="submit" class="button" value="Go" />
